<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">SANScan</string>
    <string name="title_check_detail">Check Detail</string>
    <string name="title_scan_licence_plate">Scan Licence Plate</string>
    <string name="title_vehicle_details">VEHICLE DETAILS</string>
    <string name="title_scan_licence_disc">Scan Licence Disc</string>
    <string name="hint_licence_plate">eg. LHJ 620 GP</string>
    <string name="title_scan_drivers_licence">Scan Driver\'s Licence/ID number</string>
    <string name="title_id_number">ID Number</string>
    <string name="title_passengers">Passengers</string>
    <string name="title_add_passenger">Add another passenger</string>
    <string name="title_add_new_entry">Add a New Entry</string>
    <string name="title_scan_registration"></string>
    <string name="title_scan_vehicle_registration">Scan Vehicle Registration</string>
    <string name="title_scan_passenger_id">Scan Passenger ID</string>
    <string name="title_add_weapon">Add another Weapon</string>
    <string name="img_desc_licence_plate">Licence Plate</string>
    <string name="img_desc_licence_disc">Licence Disc</string>
    <string name="img_desc_pedestrian">Pedestrian Mugshot</string>
    <string name="img_desc_driver">Driver Mugshot</string>
    <string name="img_desc_passenger">Passenger Mugshot</string>
    <!-- Preferences labels -->
    <string name="preference_label_category_recognition_languages">Recognition languages</string>
    <string name="preference_label_category_recognition_mode">Recognition mode</string>
    <string name="preference_label_category_image_processing_options">Image processing options</string>
    <string name="preference_label_recognition_languages_ocr">Recognition languages</string>
    <string name="preference_title_recognition_languages_ocr">OCR languages</string>
    <string name="preference_dialog_recognition_languages_ocr">OCR languages</string>
    <string name="preference_summary_recognition_languages_ocr">Specify which languages should be used for text recognition.</string>
    <string name="preference_title_recognition_languages_bcr">BCR languages</string>
    <string name="preference_dialog_recognition_languages_bcr">BCR languages</string>
    <string name="preference_summary_recognition_languages_bcr">Specify which languages should be used for BCR recognition.</string>
    <string name="preference_label_recognition_mode_full">Full mode</string>
    <string name="preference_label_detect_page_orientation">Detect page orientation</string>
    <string name="preference_label_prebuild_words_info">Prebuild words info</string>
    <string name="preference_label_build_words_info">Build words info</string>
    <!-- Error messages -->
    <string name="dialog_error">Error</string>
    <string name="error_bad_license">Bad license.</string>
    <string name="error_no_permanent_data">No permanent data for recognition. European patterns, english dictionaries and keywords must be present.</string>
    <string name="error_loading_image">Error loading image</string>
    <!-- BCR dialogs -->
    <string name="dialog_bcr">BCR</string>
    <string name="error_no_data_found">No data found.</string>
    <!-- Standard buttons captions -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_close">Close</string>
    <!-- Main activity labels -->
    <string name="button_image_source">Image source</string>
    <string name="button_preferences">Preferences</string>
    <string name="button_recognize">Recognize Text</string>
    <string name="button_recognize_bcr">Recognize BCR</string>
    <string name="button_recognize_barcode">Recognize Barcode</string>
    <string name="dialog_image_source">Select image source</string>
    <string name="radio_from_resources">From resources</string>
    <string name="radio_from_gallery">From gallery</string>
    <string name="radio_from_camera">From camera</string>
    <string name="title_wizard_entry_type">Entry By:</string>
    <string name="title_wizard_entry_type_vehicle">Vehicle Details</string>
    <string name="title_mode_of_transport">Mode of Transport:</string>
    <string name="title_number_of_visitors">Number of Visitors:</string>
    <string name="title_visit_reason">Reason for Visiting</string>
    <string name="title_weapons_present">Weapons Present?</string>
    <string name="button_wizard_back">Back</string>
    <string name="button_wizard_next">Next</string>
    <string name="title_activity_wizard_entry">WizardEntryActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_vehicle_detail">Capture Vehicle Details</string>
    <string name="title_activity_aircaft_detail">Capture Aircraft Details</string>
    <string name="title_activity_wizard_entry_start">Capture Entry</string>
    <string name="title_wizard_entry_start">Capture a new Entry</string>
    <string name="title_scan_pilots_licence">Scan Pilot\'s Licence/ID</string>
    <string name="title_scan_aircraft_registration">Scan Aircraft Registration</string>
    <string name="title_aircraft_registration">Aircraft Registration</string>
    <string name="hint_edit_aircraft_registration">eg. ZS-GIG</string>
    <string name="label_licence_plate">Licence Plate</string>
    <string name="title_scan_driver_biometrics">Scan Driver Biometrics</string>
    <string name="title_activity_splash">SANParks SANScan Application</string>
    <string name="title_start">Start</string>

</resources>
